--- a/source/style.css
+++ b/source/style.css
@@ -13,13 +13,15 @@ h1 {
   color: #1f326c;
   text-align: center;
 }
-form {
-  padding: 30px;
-  background: #eec1c1;
-  border-radius: 10px;
-  display: flex;
+.form-container {
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
+  padding: 15px 20px;
+  background: #eec1c1;
+  border-radius: 10px;
+}
+form {
+  display: flex;
 }
 
 .instructions {
@@ -65,6 +67,9 @@ form {
   border-radius: 2px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
 }
+.hidden {
+  display: none;
+}
 
 a {
   text-decoration: none;
@@ -87,4 +92,28 @@ footer {
 
 .story strong {
   color: #1f326a;
+}
+
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  font-size: 12px;
+  opacity: 0.6;
+}
+
+/* testing blinking */
+.blink {
+  animation: blinker 1s infinite;
+}
+
+@keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
 }
